pkgs/ffigen/test/native_cpp_test/cpp_extern_c_test_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int Function(ffi.Int, ffi.Int)>()
external int add(int a, int b);

@ffi.Native<ffi.Int>()
external int counter;

@ffi.Native<ffi.Int Function()>()
external int deep();

@ffi.Native<ffi.Int Function(ffi.Double)>()
external int outside(double d);

@ffi.Native<ffi.Void Function()>()
external void reset();

enum Fruit {
  apple(1),
  banana(2);

  final int value;
  const Fruit(this.value);

  static Fruit fromValue(int value) => switch (value) {
    1 => apple,
    2 => banana,
    _ => throw ArgumentError('Unknown value for Fruit: $value'),
  };
}

final class Number extends ffi.Union {
  @ffi.Int()
  external int i;

  @ffi.Float()
  external double f;
}

final class Pair extends ffi.Struct {
  @ffi.Int()
  external int a;

  @ffi.Int()
  external int b;

  static ffi.Pointer<Pair> $allocate(
    ffi.Allocator $allocator, {
    required int a,
    required int b,
  }) => $allocator<Pair>()
    ..ref.a = a
    ..ref.b = b;
}

enum ns$Flag {
  off(0),
  on(1);

  final int value;
  const ns$Flag(this.value);

  static ns$Flag fromValue(int value) => switch (value) {
    0 => off,
    1 => on,
    _ => throw ArgumentError('Unknown value for ns\$Flag: $value'),
  };
}
